# starling2

./: Cargo.toml  LICENSE  README.md  example.sta
examples/: arc.pvc
src/: binder.rs  language.rs  lib.rs  main.rs  parser.rs  typing.rs
src/binder/: var.rs
src/language/: ast.rs  cfg.rs  expr.rs  ite.rs  tagged.rs  typing.rs  var.rs
src/language/ast/: call.rs  constraint.rs  decl.rs  expr.rs  ite.rs  program.rs  stm.rs  typing.rs  var.rs  variable.rs  view.rs
src/language/ast/expr/: bop.rs  literal.rs  uop.rs
src/language/ast/view/: assertion.rs  decl.rs  pattern.rs
src/language/cfg/: var.rs
src/language/expr/: bop.rs  constant.rs  egg.rs  literal.rs  map.rs  uop.rs
src/language/expr/egg/: decode.rs  encode.rs
src/language/typing/: array.rs  error.rs  prim.rs  refined.rs
src/parser/: call.rs  constraint.rs  decl.rs  expr.rs  program.rs  pvc.pest  starling.pest  stm.rs  typing.rs  utils.rs  var.rs  view.rs
src/parser/view/: assertion.rs  decl.rs  pattern.rs
