[package]
name = "starling2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.1"
itertools = "0.10.5"
pest = "2.5.2"
pest_derive = "2.5.2"
thiserror = "1.0.38"
z3 = "0.11.2"
