[package]
name = "starling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
egg = "0.9.2"
eyre = "0.6.1"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
pest = "2.5.2"
pest_derive = "2.5.2"
thiserror = "1.0.38"
z3 = "0.11.2"
